<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distancia</string>
    <string name="total_km">Total de quilometros</string>
    <string name="price">Preço</string>
    <string name="price_per_litro">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_litro">KMs por Litro</string>
    <string name="total_spend">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">CALCULAR</string>
    <string name="validation_fill_all_fields">Preencha todos os campos!</string>
</resources>